--- a/executor/conf/azkaban.properties
+++ b/executor/conf/azkaban.properties
@@ -18,7 +18,7 @@ jetty.use.ssl=false
 jetty.maxThreads=25
 jetty.port=8081
 # Where the Azkaban web server is located
-azkaban.webserver.url=http://172.105.51.169:8081
+azkaban.webserver.url=http://azkaban-mysql-server:8081
 # mail settings
 mail.sender=
 job.failure.email=
@@ -33,7 +33,7 @@ azkaban.jobtype.plugin.dir=plugins/jobtypes
 # Azkaban mysql settings by default. Users should configure their own username and password.
 database.type=mysql
 mysql.port=3306
-mysql.host=172.105.51.169
+mysql.host=azkaban-mysql-server
 mysql.database=azkaban
 mysql.user=azkaban
 mysql.password=azkaban
