Updated ml code (preprocessing)

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 ENVIRONMENT=dev
+USE_MINIO=true
+MINIO_ENDPOINT=http://localhost:9000
 AWS_ACCESS_KEY_ID=admin
 AWS_SECRET_ACCESS_KEY=secretpassword
 AWS_REGION=us-east-1
 ML_BUCKET=dev
 DATASET_URL=https://archive.ics.uci.edu/ml/machine-learning-databases/00228/smsspamcollection.zip
-DATASET_RAW=data/raw/smsspamcollection.zip
+DATASET_TRAIN=data/train/SMSSpamCollection
