--- a/code/setup.cfg
+++ b/code/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = dummy
+name = mlcode
 version = 0.0.1
 author = ajkdrag
 long_description = file: README.md
@@ -11,4 +11,17 @@ classifiers =
 
 [options]
 packages = find:
+package_dir =
+    = src
 python_requires = >=3.6
+install_requires =
+    boto3
+    scikit-learn
+	pandas
+	pyyaml
+	click
+	joblib
+
+[options.entry_points]
+console_scripts =
+    spam_preprocessor = preprocessing.preprocessor:run
