Updated codebase for training

--- a/code/setup.cfg
+++ b/code/setup.cfg
@@ -25,3 +25,4 @@ install_requires =
 [options.entry_points]
 console_scripts =
     spam_preprocessor = preprocessing.preprocessor:run
+    spam_train = training.train:run
