Updated codebase for inference

--- a/code/setup.cfg
+++ b/code/setup.cfg
@@ -26,3 +26,4 @@ install_requires =
 console_scripts =
     spam_preprocessor = preprocessing.preprocessor:run
     spam_train = training.train:run
+    spam_infer = inference.infer:run
